--- a/src/style/index.less
+++ b/src/style/index.less
@@ -5,7 +5,7 @@ html, body {
 	width: 100%;
 	padding: 0;
 	margin: 0;
-	background: #FAFAFA;
+	background: #DEDEDE;
 	font-family: 'Helvetica Neue', arial, sans-serif;
 	font-weight: 400;
 	color: #444;
@@ -15,6 +15,7 @@ html, body {
 
 * {
 	box-sizing: border-box;
+	// overflow-x: hidden;
 }
 
 #app {
