finished club star component

--- a/src/components/storeItem/style.less
+++ b/src/components/storeItem/style.less
@@ -2,11 +2,32 @@
 
   padding: 10px;
   background: #fff;
-  margin: 5px;
+  margin: 2px 5px 0 5px;
   border-radius: 10px;
 
   .simpleImage {
     width: 100%;
     height: auto;
+  }
+
+  .itemInfo {
+
+    p {
+      margin: 0;
+      font-size: .8em;
+    }
+
+    .mediaTitle {
+      font-weight: bold;
+    }
+
+    .price {
+      font-weight: bold;
+    }
+
+    .priceFrom {
+      color: grey;
+      text-decoration: line-through;
+    }
   }
 }
