--- a/src/components/clubStar/style.less
+++ b/src/components/clubStar/style.less
@@ -1,9 +1,20 @@
-.clubStarComponent {
-  .clubStarImage {
+.clubStarFigure {
 
+  margin: 0;
+
+  .positioning {
+    position: absolute;
+    width: 100%;
   }
 
-  .clubStarBanner{
-    
+  .clubStarItem {
+    position: relative;
+    margin-top: 2%;
+    max-width: 35%;
+    float: right;
   }
+}
+
+.clubStarBanner {
+  width: 110%;
 }
