added categories and higthlights button

--- a/src/routes/home/style.less
+++ b/src/routes/home/style.less
@@ -5,3 +5,17 @@
 	min-height: 100%;
 	width: 100%;
 }
+
+.headerButtons {
+	width:50%;
+	height: 50px;
+	display: inline-block;
+	font-size: 1.2em;
+	background: #673AB7;
+	border: 0;
+	color: @white;
+
+	&.pressed {
+		box-shadow:inset 0px -10px 0px -5px @red;
+	}
+}
